[package]
name = "futures-stable"
version = "0.1.0"
authors = ["boats <boats@mozilla.com>"]

[dependencies.anchor-experiment]
git = "https://github.com/withoutboats/anchor_experiment"
default-features = false

[dependencies.futures-core]
git = "https://github.com/Nemo157/futures-rs"
branch = "target_has_atomic"
default-features = false

[dependencies.futures-executor]
git = "https://github.com/Nemo157/futures-rs"
branch = "target_has_atomic"
default-features = false

[features]
std = ["anchor-experiment/std", "futures-core/std", "futures-executor/std"]
default = ["std"]
